.make/.minishift/fabric8-toggles-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: fabric8-toggles
    name: f8toggles
  name: fabric8-toggles
  namespace: f8toggles
spec:
  replicas: 1
  selector:
    app: fabric8-toggles
    name: f8toggles
  template:
    metadata:
      labels:
        app: fabric8-toggles
        name: f8toggles
    spec:
      containers:
        - env:
          - name: DATABASE_URL
            value: postgres://user:password@f8toggle-db:5432/unleashdb
          image: 172.30.1.1:5000/f8toggles/fabric8togglesdocker:latest
          name: f8toggles
          ports:
          - containerPort: 4242
            protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 4242
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
