.make/.minishift/f8toggle-db-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
  creationTimestamp: null
  labels:
    app: postgresql-ephemeral
    template: postgresql-ephemeral-template
  name: f8toggle-db
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: f8toggle-db
  sessionAffinity: None
  type: ClusterIP
