.make/.minishift/fabric8-toggles-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabric8-toggles
    name: f8toggles
  name: fabric8-toggles
  namespace: f8toggles
spec:
  ports:
  - name: 4242-tcp
    port: 4242
    protocol: TCP
    targetPort: 4242
  selector:
    app: fabric8-toggles
    name: f8toggles
