.make/.minishift/fabric8-toggles-route.yml
apiVersion: v1
kind: Route
metadata:
  name: fabric8-toggles
spec:
  port:
    targetPort: 4242-tcp
  to:
    kind: Service
    name: fabric8-toggles
